setup basic stories page

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 		<div id="brand">TorQuest</div>
 	
 		<ul class="mobilenav">
-			<li><a href="page-strategies.html">Strategies</a></li>
-			<li><a href="page-case-studies.html">Case Studies</a></li>
-			<li><a href="page-team.html">Team</a></li>
-			<li><a href="page-investments.html">Investments</a></li>
-			<li><a href="page-news.html">News</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="strategies.html">Strategies</a></li>
+			<li><a href="stories.html">Stories</a></li>
+			<li><a href="team.html">Team</a></li>
+			<li><a href="investments.html">Investments</a></li>
+			<li><a href="news.html">News</a></li>
+			<li><a href="contact.html">Contact</a></li>
 			<li><a href="#">Login</a></li>
 		</ul>
 		
@@ -96,7 +96,7 @@
 
 	<div class="region-ideals">
 	
-		<div class="block wow fadeIn" data-wow-delay=".15s">
+		<div class="block wow fadeIn" data-wow-delay=".1s">
 	
 			<figure class="content dark">
 				<img src="_assets/img/fpo-car-1.jpg" alt="Car 1">
@@ -113,7 +113,7 @@
 		</div>
 	
 	
-		<div class="block wow fadeIn" data-wow-delay=".15s">
+		<div class="block wow fadeIn" data-wow-delay=".15">
 	
 			<figure class="content dark">
 				<img src="_assets/img/fpo-car-2.jpg" alt="Car 1">
@@ -130,7 +130,7 @@
 		</div>
 	
 	
-		<div class="block wow fadeIn" data-wow-delay=".15s">
+		<div class="block wow fadeIn" data-wow-delay=".1s">
 	
 			<figure class="content dark">
 				<img src="_assets/img/fpo-car-3.jpg" alt="Car 1">
@@ -152,7 +152,7 @@
 	
 	
 
-	<div class="region-glance text-center wow fadeIn" data-wow-delay=".15s">
+	<div class="region-glance text-center wow fadeIn" data-wow-delay=".1s">
 
 		<div class="row content light">
 			
@@ -203,7 +203,7 @@
 
 
 
-	<div class="block block-pad-md text-center content light wow fadeIn" data-wow-delay=".15s">
+	<div class="block block-pad-md text-center content light wow fadeIn" data-wow-delay=".1s">
 
 		<div class="row">
 				
@@ -261,7 +261,7 @@
 			
 
 
-	<footer>
+	<footer class="text-center wow fadeIn" data-wow-delay=".1s">
 		
 		<div class="row expanded">
 			
