--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div id="brand">TorQuest</div>
 	
 		<ul class="mobilenav">
-			<li><a href="strategies.html">Strategies</a></li>
+			<li><a href="strategy.html">Strategy</a></li>
 			<li><a href="stories.html">Stories</a></li>
 			<li><a href="team.html">Team</a></li>
 			<li><a href="investments.html">Investments</a></li>
@@ -278,7 +278,7 @@
 		
 		<div class="row logo">
 			
-			<a href="#"></a>
+			<a href="index.html"></a>
 			
 		</div>
 		
