Set up investments page

--- a/stories-company.html
+++ b/stories-company.html
@@ -37,16 +37,19 @@
 	
 	<div class="close-bar">
 		
-		<div class="medium-4 columns left">
-			<a href="#">Close</a>
-		</div>
+		<div class="row">
 		
-		<div class="medium-6 columns right show-for-medium">
-			<span>Pinova Holdings &bull; January 2010</span>
+			<div class="medium-4 columns left">
+				<a href="index.html">Close</a>
+			</div>
+			
+			<div class="medium-8 columns right show-for-medium">
+				<span>Pinova Holdings &bull; January 2010</span>
+			</div>
+			
 		</div>
 							
-	</div>
-	
+	</div>	
 
 
 	
