--- a/investments-company.html
+++ b/investments-company.html
@@ -133,10 +133,13 @@
 
 
 
-
-
+	<script src="https://use.typekit.net/rjh8jhj.js"></script>
 	
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
 	<script src="_assets/js/min/app-min.js"></script>
+
+
 
     <script>
 	    
