revise code for skewed divs

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
 
     
 	     
+	<div class="video-shim-skew"></div>
+
+
+
+
+<!--
 	<div class="block block-skew-wrap text-center content light">
 
 		<div class="panel-skew-top">
@@ -89,6 +95,19 @@
 			</div>
 			
 		</div>
+		
+	</div>
+-->
+
+
+	<div class="block block-pad-sm text-center content light">
+
+				<small class="show-for-small-only"><strong>Small</strong></small>
+				<small class="show-for-medium-only"><strong>Medium</strong></small>
+				<small class="show-for-large-only"><strong>Large</strong></small>
+				<small class="show-for-xlarge"><strong>XLarge Plus</strong></small>
+
+				<h1>We believe private equity&nbsp;is&nbsp;about <i>people</i>, not&nbsp;transactions.</h1>
 		
 	</div>
 
