--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	
 	<nav class="navbar">
 			
-		<div id="brand">TorQuest</div>
+		<div id="brand"></div>
 	
 		<ul class="mobilenav">
 			<li><a href="strategy.html">Strategy</a></li>
@@ -29,8 +29,8 @@
 			<li><a href="team.html">Team</a></li>
 			<li><a href="investments.html">Investments</a></li>
 			<li><a href="news.html">News</a></li>
-			<li><a href="contact.html">Contact</a></li>
-			<li><a href="#">Login</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="#">Partner Login</a></li>
 		</ul>
 		
 		<a href="javascript:void(0)" id="hamburger" class="icon">
@@ -97,7 +97,7 @@
 		<div class="block wow fadeIn" data-wow-delay=".1s">
 	
 			<figure class="content dark">
-				<img src="_assets/img/fpo-car-1.jpg" alt="Car 1">
+				<img src="_assets/img/fpo-home-1.jpg" alt="Car 1">
 			</figure>
 			
 			<div class="block-pad-md text-center content light">
@@ -114,7 +114,7 @@
 		<div class="block wow fadeIn" data-wow-delay=".15">
 	
 			<figure class="content dark">
-				<img src="_assets/img/fpo-car-2.jpg" alt="Car 1">
+				<img src="_assets/img/fpo-home-2.jpg" alt="Car 1">
 			</figure>
 			
 			<div class="block-pad-md text-center content light">
@@ -131,7 +131,7 @@
 		<div class="block wow fadeIn" data-wow-delay=".1s">
 	
 			<figure class="content dark">
-				<img src="_assets/img/fpo-car-3.jpg" alt="Car 1">
+				<img src="_assets/img/fpo-home-3.jpg" alt="Car 1">
 			</figure>
 			
 			<div class="block-pad-md text-center content light">
