--- a/news.html
+++ b/news.html
@@ -21,7 +21,7 @@
 	
 	<nav class="navbar">
 			
-		<div id="brand"><a href="index.html">TorQuest</a></div>
+		<a id="brand" href="index.html"></a>
 	
 		<ul class="mobilenav">
 			<li><a href="strategy.html">Strategy</a></li>
@@ -29,8 +29,8 @@
 			<li><a href="team.html">Team</a></li>
 			<li><a href="investments.html">Investments</a></li>
 			<li><a href="news.html">News</a></li>
-			<li><a href="contact.html">Contact</a></li>
-			<li><a href="#">Login</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="#">Partner Login</a></li>
 		</ul>
 		
 		<a href="javascript:void(0)" id="hamburger" class="icon">
