refine type, add grfx, refine closebar

--- a/investments-company.html
+++ b/investments-company.html
@@ -10,7 +10,7 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<title>Team Bio | Prototype</title>
+	<title>Investment Company | Prototype</title>
 	
 	<link rel="stylesheet" href="_assets/css/app.css">
 	
@@ -25,11 +25,12 @@
 		<div class="row">
 		
 			<div class="medium-4 columns left">
-				<a href="index.html">Close</a>
+				<a href="investments.html">Close</a>
 			</div>
 			
 			<div class="medium-8 columns right">
-				<a href="#">Previous</a><a href="#">Next</a>
+				<a class="prev" href="#"></a>
+				<a class="next" href="#"></a>
 			</div>
 			
 		</div>
