--- a/team.html
+++ b/team.html
@@ -101,6 +101,42 @@
 				</a>
 			</div>
 		
+			<div class="column">
+				<a href="team-bio.html">
+					<img src="_assets/img/fpo-headshot-1.jpg" alt="John Smith">
+				</a>
+			</div>
+
+			<div class="column">
+				<a href="team-bio.html">
+					<img src="_assets/img/fpo-headshot-2.jpg" alt="John Smith">
+				</a>
+			</div>
+
+			<div class="column">
+				<a href="team-bio.html">
+					<img src="_assets/img/fpo-headshot-3.jpg" alt="John Smith">
+				</a>
+			</div>
+
+			<div class="column">
+				<a href="team-bio.html">
+					<img src="_assets/img/fpo-headshot-4.jpg" alt="John Smith">
+				</a>
+			</div>
+
+			<div class="column">
+				<a href="team-bio.html">
+					<img src="_assets/img/fpo-headshot-5.jpg" alt="John Smith">
+				</a>
+			</div>
+
+			<div class="column">
+				<a href="team-bio.html">
+					<img src="_assets/img/fpo-headshot-6.jpg" alt="John Smith">
+				</a>
+			</div>
+		
 		</div>
 
 	
