revise style and class names of filtering items

--- a/investments.html
+++ b/investments.html
@@ -47,7 +47,7 @@
 
     <div class="block block-skew dark-gray content dark">
 	    
-		<h1>Breadth <i>and</i> Versatility</h1>
+		<h1><a href="investments-test-2.html">Breadth <i>and</i> Versatility</a></h1>
 	    
     </div>
 
