adjust video ht on mobile, add vid tint overlay

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
 			<div class="desktop-video-wrap">
 				<div class="text-container">
 					<div class="valign">
-						<h1><i>TorQuest Partners</i></h1>
+						<h1>TorQuest Partners</h1>
 					</div>
 				</div>
 				<div class="video-container">
+					<div class="video-overlay-tint"></div>
 					<video autoplay loop poster="./_assets/videos/sample.jpg" id="bgvid">
 					    <source src="_assets/videos/sample.webm" type="video/webm">
 					    <source src="_assets/videos/sample.mp4" type="video/mp4">
@@ -67,7 +68,7 @@
 			<div class="mobile-static-wrap">
 				<div class="text-container">
 					<div class="valign">
-						<h1><a data-toggle="exampleModal12">We Do That</a></h1>
+						<h1>TorQuest<br>Partners</h1>
 					</div>
 				</div>
 			</div>
