refine text scaling

--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
 		
 		body { font-size: 16px; font-family: Arial, Helvetica, sans-serif; line-height: 1.1; text-align: left; width: 65%; padding: 2rem 15%; }
 		
-		p, li { line-height: 1.4; }
+		p, li { line-height: 1.5; }
 		
 		.sm-view, .md-view, .lg-view, .xl-view { font-size: 16px; color: #f00; font-weight: bold; display: none; }
 		
@@ -44,14 +44,16 @@
 		
 		@media only screen and (min-width: 460px) {
 			
-			h1 { font-size: 7.5vmax; color: red; } 
-			h2 { font-size: 6.5vmax; color: red; } 
-			h3 { font-size: 5.5vmax; color: red; } 
-			h4 { font-size: 4.5vmax; color: red; } 
-			h5 { font-size: 3.5vmax; color: red; } 
-			h6 { font-size: 2.5vmax; color: red; } 
-			p.enlarged { font-size: 3vmax; color: red; } 
-			p, li { font-size: 2.5vmax; color: red; } 
+			h1 { font-size: 7.5vw; color: red; } 
+			h2 { font-size: 6.3vw; color: red; } 
+			h3 { font-size: 5.3vw; color: red; } 
+			h4 { font-size: 4.3vw; color: red; } 
+			h5 { font-size: 3.4vw; color: red; } 
+			h6 { font-size: 2.75vw; color: red; } 
+			p.enlarged { font-size: 2.8vw; color: red; } 
+			p, li { font-size: 2.3vw; color: red; } 
+
+			
 			.sm-view { display: none; }
 			.md-view { display: block;}
 		}
@@ -84,8 +86,8 @@
 			h4 { font-size: 6.6vmin;  color: green; } 
 			h5 { font-size: 5.13vmin;  color: green; } 
 			h6 { font-size: 3.6vmin;  color: green; } 
-			p.enlarged { font-size: 4.4vmin;  color: green; } 
-			p, li { font-size: 3.6vmin;  color: green; } 
+			p.enlarged { font-size: 3.6vmin;  color: green; } 
+			p, li { font-size: 3vmin;  color: green; } 
 			.lg-view { display: none; }
 			.xl-view { display: block;}
 		}
