set up home matrix with no outside border

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 	
 
-<body>
+<body class="home">
 	
 	<div id="preloader"></div>
 
@@ -233,38 +233,44 @@
 		
 		</div>
 		
-		<div class="row investments">
+		<div class="row investments pad-md-top-bot">
 			
-			
-			<span class="border-override"></span>
-			
-			<div class="company">
-				<img src="//placehold.it/400x400" alt="">
-			</div>
-			<div class="company">
-				<img src="//placehold.it/400x400" alt="">
-			</div>
-			<div class="company">
-				<img src="//placehold.it/400x400" alt="">
-			</div>
-			<div class="company">
-				<img src="//placehold.it/400x400" alt="">
-				</div>
-			<div class="company">
-				<img src="//placehold.it/400x400" alt="">
-			</div>
-			<div class="company">
-				<img src="//placehold.it/400x400" alt="">
-			</div>
-			<div class="company">
-				<img src="//placehold.it/400x400" alt="">
-			</div>
-			<div class="company">
-				<img src="//placehold.it/400x400" alt="">
-			</div>
-			<div class="company">
-				<img src="//placehold.it/400x400" alt="">
-			</div>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-1.jpg" alt="">
+			</a>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-2.png" alt="">
+			</a>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-3.png" alt="">
+			</a>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-1.jpg" alt="">
+			</a>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-2.png" alt="">
+			</a>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-3.png" alt="">
+			</a>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-1.jpg" alt="">
+			</a>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-2.png" alt="">
+			</a>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-3.png" alt="">
+			</a>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-1.jpg" alt="">
+			</a>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-2.png" alt="">
+			</a>
+			<a href="#" class="logo-grid">
+				<img src="_assets/img/fpo-company-logo-3.png" alt="">
+			</a>
 				
 			
 		</div>
