initial adjust font size and spacing

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 
 
-	<div class="block block-pad-md text-center content light wow fadeIn" data-wow-delay=".1s">
+	<div class="block padding-md-top-bot text-center content light wow fadeIn" data-wow-delay=".1s">
 
 		<div class="row">
 				
@@ -233,7 +233,7 @@
 		
 		</div>
 		
-		<div class="row investments pad-md-top-bot">
+		<div class="row investments padding-md-top-bot">
 			
 			<a href="#" class="logo-grid">
 				<img src="_assets/img/fpo-company-logo-1.jpg" alt="">
