minify css and js, prep for 1st client review

--- a/investments.html
+++ b/investments.html
@@ -45,7 +45,7 @@
 	
 
 
-    <div class="block block-skew dark-gray content dark">
+    <div class="block block-skew warm-gray-1 content dark">
 	    
 		<h1>Breadth <i>and</i> Versatility</h1>
 	    
