start of client correx on checklist

--- a/stories-company.html
+++ b/stories-company.html
@@ -95,7 +95,7 @@
 
 
 	
-	<div class="block block-pad-md content light text-center wow fadeIn" data-wow-delay=".1s">
+	<div class="block block-pad-md content light text-center wow fadeIn" data-wow-delay=".4s">
 		
 		<div class="row">
 			
@@ -103,7 +103,7 @@
 				
 				<h6>Pat Grozier On Trust</h6>
 							
-				<blockquote><span>&ldquo;These people are straight shooters. From day one, they did exactly what they said they’d do.&rdquo;</span></blockquote>									
+				<blockquote>&ldquo;These people are straight shooters. From day one, they did exactly what they said they’d do.&rdquo;</blockquote>									
 			</div>
 			
 		</div>	
@@ -112,7 +112,7 @@
 
 
 
-	<div class="block block-story-images content light wow fadeIn" data-wow-delay=".1s">
+	<div class="block block-story-images content light wow fadeIn" data-wow-delay=".4s">
 		
 		<div class="row collapse vertical-center text-center">
 			
@@ -134,7 +134,7 @@
 
 
 
-	<div class="block block-pad-md block-story-text content light wow fadeIn" data-wow-delay=".1s">
+	<div class="block block-pad-md block-story-text content light wow fadeIn" data-wow-delay=".4s">
 		
 		<div class="row">
 			
@@ -163,7 +163,7 @@
 			
 
 
-	<footer class="text-center wow fadeIn" data-wow-delay=".1s">
+	<footer class="text-center wow fadeIn" data-wow-delay=".4s">
 		
 		<div class="row expanded">
 			
