--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		<div id="brand"></div>
 	
 		<ul class="mobilenav">
+			<li><a href="index.html">Home</a></li>
 			<li><a href="strategy.html">Strategy</a></li>
 			<li><a href="stories.html">Stories</a></li>
 			<li><a href="team.html">Team</a></li>
@@ -116,13 +117,13 @@
 
 	<div class="region-ideals">
 	
-		<div class="block wow fadeIn" data-wow-delay=".1s">
+		<div class="block">
 	
-			<figure class="content dark">
+			<figure class="content dark wow fadeIn" data-wow-delay=".4s">
 				<img src="_assets/img/fpo-home-1.jpg" alt="Car 1">
 			</figure>
 			
-			<div class="block-pad-md text-center content light">
+			<div class="block-pad-md text-center content light wow fadeIn" data-wow-delay=".4s">
 		
 				<h1>Trust</h1>
 				<h5>We Earn It.</h5>
@@ -133,13 +134,13 @@
 		</div>
 	
 	
-		<div class="block wow fadeIn" data-wow-delay=".15">
+		<div class="block">
 	
-			<figure class="content dark">
+			<figure class="content dark wow fadeIn" data-wow-delay=".4s">
 				<img src="_assets/img/fpo-home-2.jpg" alt="Car 1">
 			</figure>
 			
-			<div class="block-pad-md text-center content light">
+			<div class="block-pad-md text-center content light wow fadeIn" data-wow-delay=".4s">
 		
 				<h1>Partnership</h1>
 				<h5>We Emphasize It.</h5>
@@ -150,13 +151,13 @@
 		</div>
 	
 	
-		<div class="block wow fadeIn" data-wow-delay=".1s">
+		<div class="block">
 	
-			<figure class="content dark">
+			<figure class="content dark wow fadeIn" data-wow-delay=".4s">
 				<img src="_assets/img/fpo-home-3.jpg" alt="Car 1">
 			</figure>
 			
-			<div class="block-pad-md text-center content light">
+			<div class="block-pad-md text-center content light wow fadeIn" data-wow-delay=".4s">
 		
 				<h1>Value</h1>
 				<h5>We Help You Create It.</h5>
@@ -174,11 +175,11 @@
 
 	
 
-	<div class="region-glance text-center wow fadeIn" data-wow-delay=".1s">
+	<div class="region-glance text-center wow fadeIn" data-wow-delay=".4s">
 
 		<div class="row content light">
 			
-			<h1>We are</h1>
+			<h2>We are</h2>
 		
 		</div>
 			
@@ -225,15 +226,15 @@
 
 
 
-	<div class="block padding-md-top-bot text-center content light wow fadeIn" data-wow-delay=".1s">
+	<div class="block padding-md-top-bot text-center content light wow fadeIn" data-wow-delay=".4s">
 
 		<div class="row">
 				
-			<h1>Making good<br>companies great.</h1>
+			<h2>Making good<br>companies great.</h2>
 		
 		</div>
 		
-		<div class="row investments padding-md-top-bot">
+		<div class="row investments">
 			
 			<a href="#" class="logo-grid">
 				<img src="_assets/img/fpo-company-logo-1.jpg" alt="">
@@ -284,7 +285,7 @@
 			
 
 
-	<footer class="text-center wow fadeIn" data-wow-delay=".1s">
+	<footer class="text-center wow fadeIn" data-wow-delay=".4s">
 		
 		<div class="row expanded">
 			
