make client changes, adjust css

--- a/investments-javascript.html
+++ b/investments-javascript.html
@@ -144,68 +144,84 @@
 
 		<div class="row investments child-list">
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-1.jpg" alt="">
+			<a href="#" class="logo-grid company" data-industry="technology" data-deal-type="corporate-carve-outs" data-fund="fund-iii-" data-status="current" data-content="#entry_id_1">
+				<div class="company-filter-placeholder"><p>1 - Industry: Tech<br>Deal: Carve<br>Fund: III<br>Status: Curr</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-1.jpg" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-2.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="technology" data-deal-type="management-buyout, recapitalization" data-fund="fund-ii-" data-status="realized" data-content="#entry_id_2">
+				<div class="company-filter-placeholder"><p>2 - Industry: Tech<br>Deal: Buyout, Recap<br>Fund: II<br>Status: Real</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-2.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-3.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="technology" data-deal-type="entrepreneurs, management-buyout" data-fund="fund-i-" data-status="current" data-content="#entry_id_3">
+				<div class="company-filter-placeholder"><p>3 - Industry: Tech<br>Deal: Entrep, Buyout<br>Fund: I<br>Status: Curr</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-3.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-4.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="technology" data-deal-type="entrepreneurs, management-buyout" data-fund="fund-i-" data-status="current" data-content="#entry_id_4">
+				<div class="company-filter-placeholder"><p>4 - Industry: Tech<br>Deal: Entrep, Buyout<br>Fund: I<br>Status: Curr</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-4.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-5.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="genetics" data-deal-type="recapitalization" data-fund="fund-iii-" data-status="current" data-content="#entry_id_5">
+				<div class="company-filter-placeholder"><p>5 - Industry: Genetics<br>Deal: Recap<br>Fund: III<br>Status: Curr</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-5.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-6.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="genetics" data-deal-type="corporate-carve-outs, recapitalization" data-fund="fund-ii-" data-status="realized" data-content="#entry_id_6">
+				<div class="company-filter-placeholder"><p>6 - Industry: Genetics<br>Deal: Carve, Recap<br>Fund: II<br>Status: Real</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-6.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-7.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="genetics" data-deal-type="management-buyout" data-fund="fund-i-" data-status="current" data-content="#entry_id_7">
+				<div class="company-filter-placeholder"><p>7 - Industry: Genetics<br>Deal: Buyout<br>Fund: I<br>Status: Curr</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-7.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-1.jpg" alt="">
+			<a href="#" class="logo-grid company" data-industry="consumer" data-deal-type="management-buyout" data-fund="fund-i-" data-status="current" data-content="#entry_id_8">
+				<div class="company-filter-placeholder"><p>8 - Industry: Consumer<br>Deal: Buyout<br>Fund: I<br>Status: Curr</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-1.jpg" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-2.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="consumer" data-deal-type="corporate-carve-outs, recapitalization" data-fund="fund-ii-" data-status="realized" data-content="#entry_id_9">
+				<div class="company-filter-placeholder"><p>9 - Industry: Consumer<br>Deal: Carve, Recap<br>Fund: II<br>Status: Real</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-2.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-3.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="consumer" data-deal-type="entrepreneurs" data-fund="fund-iii-" data-status="realized" data-content="#entry_id_10">
+				<div class="company-filter-placeholder"><p>10 - Industry: Consumer<br>Deal: Entrep<br>Fund: III<br>Status: Real</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-3.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-4.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="consumer" data-deal-type="management-buyout" data-fund="harrington" data-status="current" data-content="#entry_id_11">
+				<div class="company-filter-placeholder"><p>11 - Industry: Consumer<br>Deal: Buyout<br>Fund: Harr<br>Status: Curr</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-4.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-4.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="consumer" data-deal-type="management-buyout" data-fund="harrington" data-status="current" data-content="#entry_id_12">
+				<div class="company-filter-placeholder"><p>12 - Industry: Consumer<br>Deal: Recap<br>Fund: Harr<br>Status: Curr</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-4.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-5.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="consumer" data-deal-type="recapitalization" data-fund="harrington" data-status="current" data-content="#entry_id_13">
+				<div class="company-filter-placeholder"><p>13 - Industry: Manufacturing<br>Deal: Entrep<br>Fund: I<br>Status: Curr</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-5.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-6.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="manufacturing" data-deal-type="recapitalization" data-fund="harrington" data-status="realized" data-content="#entry_id_14">
+				<div class="company-filter-placeholder"><p>14 - Industry: Manufacturing<br>Deal: Recap<br>Fund: Harr<br>Status: Real</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-6.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-7.png" alt="">
+			<a href="#" class="logo-grid company" data-industry="manufacturing" data-deal-type="corporate-carve-outs, entrepreneurs" data-fund="fund-iii-" data-status="current" data-content="#entry_id_15">
+				<div class="company-filter-placeholder"><p>15 - Industry: Manufacturing<br>Deal: Carve, Entrep<br>Fund: III<br>Status: Curr</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-7.png" alt=""> -->
 			</a>
 			
-			<a href="investments-company.html" class="logo-grid">
-				<img src="_assets/img/fpo-company-logo-1.jpg" alt="">
+			<a href="#" class="logo-grid company" data-industry="manufacturing" data-deal-type="recapitalization" data-fund="fund-i-" data-status="realized" data-content="#entry_id_16">
+				<div class="company-filter-placeholder"><p>16 - Industry: Manufacturing<br>Deal: Recap<br>Fund: I<br>Status: Real</p></div>
+<!-- 				<img src="_assets/img/fpo-company-logo-1.jpg" alt=""> -->
 			</a>
 			
 		</div>
@@ -298,21 +314,6 @@
 			});
 		}
 		
-	</script>
-		
-    <script>
-		// display row of child filter buttons from parent button
-		$('.child-categories').hide();
-		$('.industry-list').show();
-		$('.parent-filter').click(function (e) {
-			$('.active').removeClass('active');
-		    $(this).addClass('active');
-		    $('.child-categories').hide();
-		    $('#child-' + $(this).attr('target')).show();
-		    showParentCat($(this).attr('data-foo'));
-		    e.preventDefault();
-		});
-
 	</script>
 
     <script>
