test skews on contact-test fuck!

--- a/test3.html
+++ b/test3.html
@@ -48,6 +48,9 @@
 		}	
 		
 		.shape span {
+			position: relative;
+			top: 0;
+			bottom: 0;
 			height: 100%;
 			width: 100%;
 			display: flex;
@@ -88,7 +91,7 @@
 
 <div style="position:relative;width:100vw;height:30vh;background-color:#000;">
 	
-	<div class="shape"><span><h1>Am I center Made?</h1></span></div>
+	<div class="shape"><span><h1>Am I centerered?</h1></span></div>
 	
 </div>
 	
