revise spacing naming

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				<img class="full-width" src="_assets/img/fpo-home-1.jpg" alt="Image 1">
 			</figure>
 			
-			<div class="block-pad-md text-center content light wow fadeIn" data-wow-delay=".4s">
+			<div class="text-center content light padding-7-3-7-3 wow fadeIn" data-wow-delay=".4s">
 		
 				<h1>Trust</h1>
 				<h5>We Earn It.</h5>
@@ -140,7 +140,7 @@
 				<img class="full-width" src="_assets/img/fpo-home-2.jpg" alt="Car 1">
 			</figure>
 			
-			<div class="block-pad-md text-center content light wow fadeIn" data-wow-delay=".4s">
+			<div class="text-center content light padding-7-3-7-3 wow fadeIn" data-wow-delay=".4s">
 		
 				<h1>Partnership</h1>
 				<h5>We Emphasize It.</h5>
@@ -157,7 +157,7 @@
 				<img class="full-width" src="_assets/img/fpo-home-3.jpg" alt="Car 1">
 			</figure>
 			
-			<div class="block-pad-md text-center content light wow fadeIn" data-wow-delay=".4s">
+			<div class="text-center content light padding-7-3-7-3 wow fadeIn" data-wow-delay=".4s">
 		
 				<h1>Value</h1>
 				<h5>We Help You Create It.</h5>
@@ -226,7 +226,7 @@
 
 
 
-	<div class="block padding-md-top-bot text-center content light wow fadeIn" data-wow-delay=".4s">
+	<div class="block padding-7-0-7-0 text-center content light wow fadeIn" data-wow-delay=".4s">
 
 		<div class="row">
 				
