--- a/investments-company.html
+++ b/investments-company.html
@@ -58,7 +58,7 @@
 	
 
 
-	<div class="block block-pad-lg text-center content light">
+	<div class="block padding-12-4-12-4 text-center content light">
 		
 		<div class="row">
 			
@@ -90,7 +90,7 @@
 	
 	
 
-	<div class="block block-pad-sm content light wow fadeIn" data-wow-delay=".4s">
+	<div class="block padding-4-0-4-0 content light wow fadeIn" data-wow-delay=".4s">
 		
 		<div class="row large-collapse">
 			
