--- a/investments.html
+++ b/investments.html
@@ -59,7 +59,7 @@
 
 
 	     
-	<div class="block block-pad-md text-center content light">
+	<div class="block padding-7-3-7-3 text-center content light">
 
 		<h5><span>Our Investments</span></h5>
 		
@@ -145,7 +145,7 @@
 	</div><!-- block -->
 
 
-	<div id="panel-content" class="block block-pad-sm content light text-center wow fadeIn" data-wow-delay=".4s">
+	<div id="panel-content" class="block padding-4-0-4-0 content light text-center wow fadeIn" data-wow-delay=".4s">
 		
 
 		<div class="row investments child-list">
