--- a/stories-company.html
+++ b/stories-company.html
@@ -39,7 +39,7 @@
 	
 	<div id="preloader"></div>
 
-	<div class="reveal" id="exampleModal12" data-reveal data-reset-on-close="true">
+	<div class="reveal" id="video-modal" data-reveal data-reset-on-close="true">
 		
 		<div class="flex-video widescreen vimeo">
 
@@ -83,7 +83,7 @@
 				<span>
 					<h2>Pat Grozier</h2>
 					<h6>CEO, Pinova Holdings</h6>
-					<a data-toggle="exampleModal12" class="btn-play" href="#"></a>
+					<a data-toggle="video-modal" class="btn-play" href="#"></a>
 				</span>
 				
 				
@@ -95,7 +95,7 @@
 
 
 	
-	<div class="block block-pad-md content light text-center wow fadeIn" data-wow-delay=".4s">
+	<div class="block padding-7-3-7-3 content light text-center wow fadeIn" data-wow-delay=".4s">
 		
 		<div class="row">
 			
@@ -134,7 +134,7 @@
 
 
 
-	<div class="block block-pad-md block-story-text content light wow fadeIn" data-wow-delay=".4s">
+	<div class="block padding-7-3-7-3 content light wow fadeIn" data-wow-delay=".4s">
 		
 		<div class="row">
 			
