--- a/news-article.html
+++ b/news-article.html
@@ -58,7 +58,7 @@
 	
 
 
-	<div class="block news-article block-pad-sm content light">
+	<div class="block news-article padding-4-0-4-0 content light">
 		
 		<div class="row text-center ">
 			
