--- a/team.html
+++ b/team.html
@@ -59,7 +59,7 @@
 
 
 	     
-	<div class="block block-pad-md text-center content light">
+	<div class="block padding-7-3-7-3 text-center content light">
 
 		<h5><span>Our Team</span></h5>
 		
