fix some css naming

--- a/stories-company.html
+++ b/stories-company.html
@@ -72,7 +72,7 @@
 
 
 	
-	<div class="block block-story-header content dark">
+	<div class="block story-header content dark">
 
 		<figure>
 			
@@ -112,11 +112,11 @@
 
 
 
-	<div class="block block-story-images content light wow fadeIn" data-wow-delay=".4s">
+	<div class="block story-images content light wow fadeIn" data-wow-delay=".4s">
 		
 		<div class="row collapse vertical-center text-center">
 			
-			<div class="large-6 columns block-story-company-logo">
+			<div class="story-company-logo large-6 columns">
 				
 				<img src="_assets/img/fpo-company-logo-3.png" alt="Logo 1">	
 											
