modify nav underline active, story img 1 shorter

--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,13 @@
 		<a id="brand" href="index.html"></a>
 	
 		<ul class="mobilenav">
+			<li><a href="index.html">Home</a></li>
 			<li><a href="strategy.html">Strategy</a></li>
 			<li><a href="stories.html">Stories</a></li>
 			<li><a href="team.html">Team</a></li>
 			<li><a href="investments.html">Investments</a></li>
 			<li><a href="news.html">News</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
+			<li><a class="active" href="contact.html">Contact Us</a></li>
 			<li><a href="#">Partner Login</a></li>
 		</ul>
 		
