--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div id="brand"></div>
 	
 		<ul class="mobilenav">
-			<li><a href="index.html">Home</a></li>
+			<li><a class="active" href="index.html">Home</a></li>
 			<li><a href="strategy.html">Strategy</a></li>
 			<li><a href="stories.html">Stories</a></li>
 			<li><a href="team.html">Team</a></li>
