--- a/strategy.html
+++ b/strategy.html
@@ -24,7 +24,8 @@
 		<a id="brand" href="index.html"></a>
 	
 		<ul class="mobilenav">
-			<li><a href="strategy.html">Strategy</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a class="active" href="strategy.html">Strategy</a></li>
 			<li><a href="stories.html">Stories</a></li>
 			<li><a href="team.html">Team</a></li>
 			<li><a href="investments.html">Investments</a></li>
