--- a/test1.html
+++ b/test1.html
@@ -4,53 +4,30 @@
 	
 <head>
 	
-	<style>
-		#preloader {
-			position: fixed;
-			left: 0;
-			top: 0;
-			z-index: 9999;
-			width: 100%;
-			height: 100%;
-			overflow: visible;
-			background-color: #333;
-			background-image: url(_assets/img/brand-tag-wht.svg);
-			-webkit-background-size: 200px 74px;
-			background-size: 200px 74px;
-			background-repeat: no-repeat;
-			background-position: center center;
-		}
-	</style>
-
 	<meta charset="utf-8">
 	
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<title>Home | Prototype</title>
+	<title>Home2 | Prototype</title>
 	
 	<link rel="stylesheet" href="_assets/css/app.css">
-		
-
+	
 </head>
 	
 
-<body class="home">
-	
-
-	<div id="preloader"></div>
-
+<body>
 	
 	<nav class="navbar">
 			
 		<a id="brand" href="index.html"></a>
 	
 		<ul class="mobilenav">
-			<li><a class="active" href="index.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="strategy.html">Strategy</a></li>
 			<li><a href="stories.html">Stories</a></li>
-			<li><a href="team.html">Team</a></li>
+			<li><a class="active" href="team.html">Team</a></li>
 			<li><a href="investments.html">Investments</a></li>
 			<li><a href="news.html">News</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
