--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			width: 100%;
 			height: 100%;
 			overflow: visible;
-			background-color: #333;
+			background-color: #151F25;
 			background-image: url(_assets/img/brand-tag-wht.svg);
 			-webkit-background-size: 200px 74px;
 			background-size: 200px 74px;
@@ -204,7 +204,7 @@
 
 	<div class="region-glance text-center">
 
-		<div class="row content light">
+		<div class="row content light wow fadeIn" data-wow-delay=".4s">
 			
 			<h2>We are</h2>
 		
@@ -253,15 +253,15 @@
 
 
 
-	<div class="block padding-7-0-7-0 text-center content light wow fadeIn" data-wow-delay=".4s">
+	<div class="block padding-7-0-7-0 text-center content light">
 
-		<div class="row">
+		<div class="row wow fadeIn" data-wow-delay=".4s">
 				
 			<h2>Making good<br>companies great.</h2>
 		
 		</div>
 		
-		<div class="row investments">
+		<div class="row investments wow fadeIn" data-wow-delay=".4s">
 			
 			<a href="#" class="logo-grid">
 				<img src="_assets/img/fpo-company-logo-1.jpg" alt="">
@@ -303,7 +303,7 @@
 		</div>
 		
 		
-		<div class="row text-center">
+		<div class="row text-center wow fadeIn" data-wow-delay=".4s">
 			<a class="view-more" href="investments.html">All Investments</a>
 		</div>
 
