--- a/investments-company.html
+++ b/investments-company.html
@@ -13,7 +13,7 @@
 			width: 100%;
 			height: 100%;
 			overflow: visible;
-			background-color: #333;
+			background-color: #151F25;
 			background-image: url(_assets/img/brand-tag-wht.svg);
 			-webkit-background-size: 200px 74px;
 			background-size: 200px 74px;
