client changes2 to investments pages

--- a/investments.html
+++ b/investments.html
@@ -50,7 +50,7 @@
 
 		<div class="slant-head warm-gray-1 content dark">
 					    
-			<span><h1>Breadth <i>and</i> Versatility</h1></span>
+			<span><h1>Breadth <i>and</i> versatility</h1></span>
 			    
 		</div>
 		
