Team page new hover/responsive names

--- a/team.html
+++ b/team.html
@@ -70,77 +70,113 @@
 
 	<div class="region-team-headshots wow fadeIn" data-wow-delay=".4s">
 		
-		<div class="row collapse row small-up-1 medium-up-2 large-up-3">
+		<div class="row collapse row small-up-1 medium-up-2 large-up-3 text-center">
 			
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-1.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Andrew Kolupanowicz</span>
+					</span>
 				</a>
 			</div>
-
+			
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-2.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Emma Rex</span>
+					</span>
 				</a>
 			</div>
 
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-3.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Jonathan Tarshis Neil</span>
+					</span>
 				</a>
 			</div>
 
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-4.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Debra Fallstaff</span>
+					</span>
 				</a>
 			</div>
 
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-5.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Alexander Doolittle Osprey Findawdle Wainscott, III</span>
+					</span>
 				</a>
 			</div>
 
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-6.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Jason Parker</span>
+					</span>
 				</a>
 			</div>
 		
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-1.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Andrew Kolupanowicz</span>
+					</span>
 				</a>
 			</div>
-
+			
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-2.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Emma Rex</span>
+					</span>
 				</a>
 			</div>
 
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-3.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Jonathan Tarshis Neil</span>
+					</span>
 				</a>
 			</div>
 
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-4.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Debra Fallstaff</span>
+					</span>
 				</a>
 			</div>
 
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-5.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Alexander Doolittle Osprey Findawdle Wainscott, III</span>
+					</span>
 				</a>
 			</div>
 
 			<div class="column">
 				<a href="team-bio.html">
 					<img src="_assets/img/fpo-headshot-6.jpg" alt="John Smith">
+					<span class="gradient-overlay">
+						<span class="bio-name">Jason Parker</span>
+					</span>
 				</a>
 			</div>
 		
