fix video header

--- a/index.html
+++ b/index.html
@@ -103,8 +103,31 @@
 			</div>
 			
 		</div>
-	
 
+	</div><!-- region-home-video -->
+
+
+
+
+<!--
+	<div class="region-home-video">
+		
+		<div class="desktop-intro-block content dark">
+			
+			<div class="desktop-video-wrap">
+				<div class="text-container">
+					<div class="valign">
+						<h1>TorQuest Partners</h1>
+					</div>
+				</div>
+				<div class="video-container">
+					<div class="video-overlay-tint"></div>
+					<video autoplay loop poster="./_assets/videos/sample.jpg" id="bgvid">
+					    <source src="_assets/videos/sample.webm" type="video/webm">
+					    <source src="_assets/videos/sample.mp4" type="video/mp4">
+					</video>    
+				</div>
+			</div>
 			
 			<div class="mobile-static-wrap">
 				<div class="text-container">
@@ -118,7 +141,6 @@
 	
 	    
 		     
-<!--
 		<div class="video-shim-skew text-center content light">
 			
 			<div class="headline">
@@ -126,10 +148,11 @@
 			</div>
 			
 		</div>
--->
 		
 
-	</div><!-- region-home-video -->
+	</div>
+-->
+
 
 
 
