change skews to original, tweak spacing and h1/h2

--- a/news.html
+++ b/news.html
@@ -48,7 +48,7 @@
 
      <div class="block block-skew dark-gray content dark">
 	    
-		<span><h1>News</h1></span>
+		<h1>News</h1>
 	    
     </div>
 
