tweaking changes prior to uploading for client

--- a/investments-company.html
+++ b/investments-company.html
@@ -58,7 +58,7 @@
 	
 
 
-	<div class="block padding-12-4-12-4 text-center content light">
+	<div class="block padding-10-0-10-0 text-center content light">
 		
 		<div class="row">
 			
@@ -81,8 +81,10 @@
 	<div class="block content dark">
 		
 		<div class="row">
-
-				<img class="full-width" src="_assets/img/fpo-company-spot.jpg" alt="X 1">
+			
+			<div class="medium-5 columns block-bkgrd-img" style="background-image: url(_assets/img/fpo-company-img-1.jpg);"></div>
+			
+			<div class="medium-7 columns block-bkgrd-img" style="background-image: url(_assets/img/fpo-company-img-2.jpg);"></div>
 						
 		</div>
 		
