cleanup files prior to template conversion

--- a/investments-javascript.html
+++ b/investments-javascript.html
@@ -21,7 +21,7 @@
 	
 	<nav class="navbar">
 			
-		<a id="brand" href="index.html"></a>
+		<a id="brand" href="home.html"></a>
 	
 		<ul class="mobilenav">
 			<li><a href="strategy.html">Strategy</a></li>
@@ -252,7 +252,7 @@
 		
 		<div class="row logo">
 			
-			<a href="index.html"></a>
+			<a href="home.html"></a>
 			
 		</div>
 		
