--- a/news.html
+++ b/news.html
@@ -288,6 +288,24 @@
 	
 	
 	
+		<!-- page js
+		=========================================================================================== -->
+	
+		<script>
+		
+			// scroll to top
+		    $('.up').click(function () {
+		        $("html, body").animate({
+		            scrollTop: 0
+		        }, 600);
+		        return false;
+		    });
+		
+		</script>
+		
+	
+	
+	
 	</body>
 	
 
